--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 
-#server.port=9090
-spring.mvc.view.prefix = /WEB-INF/views/
-spring.mvc.view.suffix = .jsp
+server.port=9090
+#spring.mvc.view.prefix = /WEB-INF/views/
+#spring.mvc.view.suffix = .jsp
 ## MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/exams
-spring.datasource.username=root
-spring.datasource.password=root
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:dcbapp
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
