--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+
+spring.main.web-application-type=reactive
+
 server.port=9090
 #spring.mvc.view.prefix = /WEB-INF/views/
 #spring.mvc.view.suffix = .jsp
